# GardenRL

./: .gitignore  .mcp.json  CLAUDE.md  README.md  TRAINING.md  __init__.py  client.py  gpu-service.json  models.py  openenv.yaml  pyproject.toml  sub-bounty-analysis.md  train.py
examples/: example_episode.py
landing-page/: package-lock.json  package.json
landing-page/app/: globals.css  layout.tsx  page.tsx
landing-page/app/tech-specs/: page.tsx
landing-page/components/: GantryRobotDemo.tsx  ProgressIndicator.tsx  RobotArmSimulation.tsx
landing-page/components/charts/: HarvestWeightChart.tsx  RewardCurveChart.tsx  RewardProgressionChart.tsx  StabilityChart.tsx  SuccessRateChart.tsx  SuccessRateComparisonChart.tsx
landing-page/components/sections/: Challenge.tsx  Hero.tsx  HowItWorks.tsx  Intro.tsx  RobotDemo.tsx  TheScience.tsx  TrainingResults.tsx  TryIt.tsx  WhyGardenRL.tsx
landing-page/public/data/: episode-replay.json
landing-page/public/models/: gantry-robot.glb
scripts/: export_episode.py
server/: Dockerfile  GardenRL_environment.py  __init__.py  app.py  requirements.txt
tests/: __init__.py  test_client.py  test_environment.py  test_models.py
training/: BENCHMARK.md  benchmark.csv  train.py  train_art.py
