# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-GardenRL"
version = "0.1.0"
description = "Gardenrl environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.0",
    # Training and logging
    "wandb>=0.16.0",  # W&B integration for training metrics (20% of hackathon score)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m GardenRL.server.app
server = "GardenRL.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["GardenRL", "GardenRL.server"]
package-dir = { "GardenRL" = ".", "GardenRL.server" = "server" }